<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="5dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mesh_rashi"
            android:layout_width="50dp"
            android:clickable="true"
            android:layout_height="50dp"
            android:src="@drawable/aries"
            android:layout_marginStart="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mesh_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/mesh"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/vrishb_rashi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/taurus"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_oval"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vrishb_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/vrisabh"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mithun_rashi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gemini"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_oval"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mithun_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/mithun"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/krk_rashi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cancer"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_oval"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/krk_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/krk"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/singh_rashi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/leo"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_oval"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/singh_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/singh"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/kanya_rashi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/virgo"
                android:layout_marginStart="5dp"
                android:background="@drawable/back_oval"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kanya_rashi"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textColor="#FFFF"
                android:fontFamily="@font/baloo"
                android:text="@string/knya"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>



    </LinearLayout>
    </HorizontalScrollView>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tula_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/libra"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tula_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tula"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/vrishic_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/scorpio"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vrishic_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/vrischic"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dhanu_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sagittarius"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dhanu_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/dhanu"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/makar_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/capricornus"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/makar_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/makr"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/kumbh_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/aquarius"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kumbh_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/kumbh"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/min_rashi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pisces"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/back_oval"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/min_rashi"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:textColor="#FFFF"
                    android:fontFamily="@font/baloo"
                    android:text="@string/min"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>